src/objects/Partner_Profile_PC__c.object
<CustomObject>
    <fields>
        <fullName>Employees_w_Security_Clearance__c</fullName>
        <label># Employees w/Security Clearance</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EncryptedKey__c</fullName>
        <label>EncryptedKey</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fed_Agencies_w_Strongest_Relationship__c</fullName>
        <label>Fed Agencies w/Strongest Relationship</label>
        <length>180</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Federal_Total_Revenue__c</fullName>
        <label>% Federal Total Revenue</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Financial_Dir_CEO_Contact_Address_1__c</fullName>
        <label>Primary Finance Contact Address 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Financial_Dir_CEO_Contact_Address_2__c</fullName>
        <label>Primary Finance Contact Address 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Financial_Dir_CEO_Contact_City_Town__c</fullName>
        <label>Primary Finance Contact  City / Town</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Financial_Dir_CEO_Contact_Country__c</fullName>
        <label>Primary Finance Contact  Country</label>
        <picklist>
            <picklistValues>
                <fullName>United States</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canada</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Financial_Dir_CEO_Contact_Email__c</fullName>
        <label>Primary Finance Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Financial_Dir_CEO_Contact_First_Name__c</fullName>
        <label>Primary Finance Contact First Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Financial_Dir_CEO_Contact_Last_Name__c</fullName>
        <label>Primary Finance Contact Last Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Financial_Dir_CEO_Contact_Phone__c</fullName>
        <label>Primary Finance Contact Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Financial_Dir_CEO_Contact_Postal_Code__c</fullName>
        <label>Primary Finance Contact Postal Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Financial_Dir_CEO_Contact_State_Province__c</fullName>
        <label>Primary Finance Contact State/Province</label>
        <picklist>
            <controllingField>Financial_Dir_CEO_Contact_Country__c</controllingField>
            <picklistValues>
                <fullName>AB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ME</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MT</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Financial_Dir_CEO_Contact_Title__c</fullName>
        <label>Primary Finance Contact Title</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Generic_Country__c</fullName>
        <label>Generic Country</label>
        <picklist>
            <picklistValues>
                <fullName>United States</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canada</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Generic_State__c</fullName>
        <label>Generic State</label>
        <picklist>
            <controllingField>Generic_Country__c</controllingField>
            <picklistValues>
                <fullName>AB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ME</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MT</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Helpdesk_Support_Offered__c</fullName>
        <label>Helpdesk Support Offered</label>
        <picklist>
            <picklistValues>
                <fullName>Not Offered</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complimentary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fee Based</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complimentary &amp; Fee Based</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Legal_Contact_Address_1__c</fullName>
        <label>Primary Legal Contact Address 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legal_Contact_Address_2__c</fullName>
        <label>Primary Legal Contact Address 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legal_Contact_City_Town__c</fullName>
        <label>Primary Legal Contact City / Town</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legal_Contact_Country__c</fullName>
        <label>Primary Legal Contact Country</label>
        <picklist>
            <picklistValues>
                <fullName>United States</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canada</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Legal_Contact_Email__c</fullName>
        <label>Primary Legal Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Legal_Contact_First_Name__c</fullName>
        <label>Primary Legal Contact First Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legal_Contact_Last_Name__c</fullName>
        <label>Primary Legal Contact Last Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legal_Contact_Phone__c</fullName>
        <label>Primary Legal Contact Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Legal_Contact_Postal_Code__c</fullName>
        <label>Primary Legal Contact Postal Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legal_Contact_State_Province__c</fullName>
        <label>Primary Legal Contact State/Province</label>
        <picklist>
            <controllingField>Legal_Contact_Country__c</controllingField>
            <picklistValues>
                <fullName>AB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ME</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MT</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Legal_Contact_Title__c</fullName>
        <label>Primary Legal Contact Title</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marketing_Contact_Address_1__c</fullName>
        <label>Primary Marketing Contact Address 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marketing_Contact_Address_2__c</fullName>
        <label>Primary Marketing Contact Address 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marketing_Contact_City_Town__c</fullName>
        <label>Primary Marketing Contact City / Town</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marketing_Contact_Country__c</fullName>
        <label>Primary Marketing Contact Country</label>
        <picklist>
            <picklistValues>
                <fullName>United States</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canada</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Marketing_Contact_Email__c</fullName>
        <label>Primary Marketing Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Marketing_Contact_First_Name__c</fullName>
        <label>Primary Marketing Contact First Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marketing_Contact_Last_Name__c</fullName>
        <label>Primary Marketing Contact Last Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marketing_Contact_Phone__c</fullName>
        <label>Primary Marketing Contact Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Marketing_Contact_Postal_Code__c</fullName>
        <label>Primary Marketing Contact Postal Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marketing_Contact_State_Province__c</fullName>
        <label>Primary Marketing Contact State/Province</label>
        <picklist>
            <controllingField>Marketing_Contact_Country__c</controllingField>
            <picklistValues>
                <fullName>AB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ME</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MT</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Marketing_Contact_Title__c</fullName>
        <label>Primary Marketing Contact Title</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_Certifications_Held_Competitors__c</fullName>
        <label>Number Certifications Held Competitors</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Offers_CS_Solution_Applications__c</fullName>
        <description>Customer Support Solution Applications(including Motorola)</description>
        <label>Customer Support Applications Offered</label>
        <picklist>
            <picklistValues>
                <fullName>Not Offered</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complimentary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fee Based</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complimentary &amp; Fee Based</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Parent_Corp_GovtTax_Registration_ID__c</fullName>
        <label>Parent Corp Govt/Tax Registration Id</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Corporation_City_Town__c</fullName>
        <label>Parent Corporation City / Town</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Corporation_Country__c</fullName>
        <label>Parent Corporation Country</label>
        <picklist>
            <picklistValues>
                <fullName>Afghanistan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aland Islands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Albania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Algeria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Andorra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Angola</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anguilla</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antigua and Barbuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Argentina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Armenia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aruba</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Austria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Azerbaijan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahamas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahrain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bangladesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Barbados</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belarus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belgium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belize</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bermuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bhutan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bolivia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bosnia and Herzegovina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Botswana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bouvet Island</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brazil</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>British Indian Ocean Territory</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Parent_Corporation_Postal_Code__c</fullName>
        <label>Parent Corporation Postal Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Corporation_State_Province__c</fullName>
        <label>Parent Corporation State/Province</label>
        <picklist>
            <controllingField>Parent_Corporation_Country__c</controllingField>
            <picklistValues>
                <fullName>AB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ME</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MT</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Parent_Corporation_Street_Address_1__c</fullName>
        <label>Parent Corporation Street Address 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Corporation_Street_Address_2__c</fullName>
        <label>Parent Corporation Street Address 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Corporation__c</fullName>
        <label>Parent Corporation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Application__c</fullName>
        <label>Partner Application</label>
        <referenceTo>Partner_Application__c</referenceTo>
        <relationshipName>Partner_Profiles_PC</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Partner_Locator_Permisson_Granted__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Partner Locator Permisson Granted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Partner_Profile_Submitted_Date__c</fullName>
        <label>Partner Profile Submitted Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Percentage_Purchases_From_Distributor__c</fullName>
        <label>Percentage Purchases From Distributor</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Percentage_Purchases_From_Manufacturer__c</fullName>
        <label>Percentage Purchases From Manufacturer</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Percentage_Purchases_From_Other__c</fullName>
        <label>Percentage Purchases From Other</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Percentage_Sales_To_Business_Enterprise__c</fullName>
        <label>Percentage Sales To Business/Enterprise</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Percentage_Sales_To_Resellers__c</fullName>
        <label>Percentage Sales To Resellers</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Personnel_calling_Fed_Agencies__c</fullName>
        <label># Personnel calling Fed Agencies</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Preferred_Language_Code__c</fullName>
        <label>Preferred Language Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_CxO_Contact_First_Name__c</fullName>
        <label>Primary CxO Contact First Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_CxO_Contact_Last_Name__c</fullName>
        <label>Primary CxO Contact Last Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Executive_Sponsor_Address_1__c</fullName>
        <label>Primary CxO Address 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Executive_Sponsor_Address_2__c</fullName>
        <label>Primary CxO Address 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Executive_Sponsor_City_Town__c</fullName>
        <label>Primary CxO City / Town</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Executive_Sponsor_Country__c</fullName>
        <label>Primary CxO Country</label>
        <picklist>
            <picklistValues>
                <fullName>United States</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canada</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Primary_Executive_Sponsor_Email__c</fullName>
        <label>Primary CxO Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Primary_Executive_Sponsor_Phone__c</fullName>
        <label>Primary CxO Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Primary_Executive_Sponsor_Postal_Code__c</fullName>
        <label>Primary CxO Postal Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
</CustomObject>